# quanto_analysis

./: README.md  pyproject.toml
src/modelling/: __init__.py
src/modelling/maths/analysis/: quanto_option_1_analysis.py  quanto_option_2_analysis.py  vanilla_option_analysis.py
src/modelling/maths/models/: black_scholes.py  black_scholes_quanto.py  option_right.py
src/modelling/maths/random/: random_number_generator.py
src/modelling/quantity/: quantity.py  uom.py
src/modelling/utils/: type_utils.py
tests/maths/models/: test_black_scholes.py  test_black_scholes_quanto.py
tests/maths/random/: test_rng.py
tests/quantity/: quantity_test_utils.py  test_qty.py  test_uom.py
tests/random_test/: random_test_case.py  test_random_test.py
tests/utils/: test_type_utils.py
