[project]
name = "modelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cage433", email = "cage433@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[project.scripts]
modelling = "modelling:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

# Source - https://stackoverflow.com/a/49033954
# Posted by hoefling, modified by community. See post 'Timeline' for change history
# Retrieved 2026-01-29, License - CC BY-SA 4.0

# content of pytest.toml
[pytest]
addopts = ["--import-mode=importlib"]
strict = true

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
